scaling logic is changed and more features added
